# SCUTRacingSLAM

./: README.md  demo01.py  demo02.py  demo03.py
frenet_coordinate/: CMakeLists.txt  package.xml
frenet_coordinate/config/: frenet_coordinate.yaml
frenet_coordinate/include/: basic_.hpp  cubic_spline_interpolation.hpp  fitted_curve.hpp  frenet_coordinate_handle.hpp  visual.hpp
frenet_coordinate/launch/: frenet_coordinate.launch  frenet_coordinate.launch.copy
frenet_coordinate/rviz_config/: frenet.rviz
frenet_coordinate/src/: cubic_spline_interpolation.cpp  fitted_curve.cpp  frenet_coordinate_handle.cpp  main.cpp
racingslam/: CMakeLists.txt  package.xml
racingslam/config/: racingslam-config.yaml
racingslam/include/: cone_in_slam.h  handle.h  mainhandle.h  mapping.h
racingslam/launch/: mapping.launch
racingslam/msg/: CarTrack.msg
racingslam/rviz_cfg/: mapping_chejian.rviz  mapping_huangpu.rviz  mapping_rslidar.rviz
racingslam/src/: cone_in_slam.cpp  main_node.cpp  mainhandle.cpp  mapping.cpp  mapping_node.cpp
